Correcting font-size and spacing

--- a/src/components/welcome-view/style.css
+++ b/src/components/welcome-view/style.css
@@ -17,6 +17,14 @@
     font-size: 24px;
 }
 
+.buttonText {
+  font-size: 20px;
+}
+
+.moreInfo {
+  font-size: 14px !important;
+}
+
 img[alt="feide-logo-button"] {
     max-height: 2em;
 }
